# 3d-math-benchmark

./: CMakeLists.txt
src/: mango_mat4.cpp  mango_swizzle.cpp  mango_vec4.cpp
